[package]
name = "image-sorter"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24", features = ["default_fonts"] }
egui = "0.24"
image = "0.24"
winapi = { version = "0.3", features = ["winuser", "windef"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

