[package]
name = "leftright"
version = "0.1.0"
edition = "2021"
description = "A visual image sorting tool"
authors = ["Omar Al Matar <bewinxed@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bewinxed/leftright"

[dependencies]
eframe = { version = "0.24.1", features = ["default"] }
image = "0.24.7"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

[[bin]]
name = "leftright"
path = "src/main.rs"